--- a/DA-4-31-07-22.ipynb
+++ b/DA-4-31-07-22.ipynb
@@ -855,8 +855,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7413e893",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mode_of_society' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmode_of_society\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'mode_of_society' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "mode_of_society"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5f1cda6",
    "metadata": {},
    "outputs": [],
    "source": []
